Fixed overflow issue with dropdowns

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,15 +53,12 @@ body {
 }
 
 #header{
-  width: 100%;
   max-height: 20%;
 }
 
 #maincontent {
   background-color: #f3f3f3;
   width: 100%;
-  min-height: 70%;
-  overflow-y: scroll;
 }
 #footer {
   background-color: #444;
@@ -71,9 +68,7 @@ body {
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
-
   width: 100%;
-  max-height: 20%;
 }
 /* ====================== Navigation ====================== */
 nav {
@@ -155,7 +150,11 @@ nav h1 a {
 
 /* ==================div containing both the selects==================== */
 #filter-select{
+  padding: 5px;
   display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .filter-options select {
@@ -167,7 +166,8 @@ nav h1 a {
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
-  width: 200px;
+  max-width: 200px;
+  min-width: 100px;
 }
 
 /* ====================== Restaurant Listing ====================== */
